--- a/Time Series Intermediate Data.Rmd
+++ b/Time Series Intermediate Data.Rmd
@@ -1,20 +1,28 @@
 ---
 title: "Time Series Intermediate Data"
-author: "Danielle Sebring"
-date: "3/24/2022"
+author: "Danielle Sebring + Steven Barnett"
+date: "4/5/2022"
 output: pdf_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-setwd("~/Spring 2022 5414/baseballdatabank-master/core")
+data_dir <- Sys.getenv("DATA_DIR")
+knitr::opts_knit$set(root.dir = data_dir)
 library("Lahman")
 library("dplyr")
 ```
 
-```{data}
+## Problem Statement
+
+Major League Baseball (MLB) has collected data on its players and their performances for over 100 years since 1907. This rich supply of data allows one to investigate and learn about trends in performance over time. Additionally, the game of baseball itself has evolved over the years. This is due to a variety of factors, ranging from the introduction of new technology to changes in the rules established by MLB. For example, the advent of sports analytics in the early 2000s has had an enormous impact on the game. Therefore, we are going to investigate the evolution of MLB player, team, division, and league-wide statistics over time. We would like to identify certain events in history, outside influences, and changes to the game itself and how they alter player, team, division, and league-wide performance moving forward. We would also like to consider relationships between different statistics and correlations among their individual time series.
+
+## Data Collection
+
+```{r data, include = FALSE}
 batting <- read.csv("Batting.csv")
 pitching <- read.csv("Pitching.csv")
+teams <- read.csv("Teams.csv")
 
 ## Creating Missing Batting Variables ##
 names(batting)
@@ -31,6 +39,37 @@ bat <- batting %>%
          #LOB = left on base
          R.G <- R/G
          )
+
+## Summarize league-wide statistics by year
+bat_league <- batting %>% 
+  dplyr::select(!c(playerID, stint, teamID, lgID)) %>%
+  group_by(yearID) %>% 
+  summarise_all(sum) %>%
+  mutate(BA = H/AB,
+         PA = AB+BB+HBP+SF+SH,
+         X1B = H-X2B-X3B-HR,
+         OBP = (H+BB+HBP)/(AB+BB+HBP+SF),
+         #OPSplus = 100*(OBP/leagueOBP + SLG/leagueSLG -1),
+         TB = 1*X1B+2*X2B+3*X3B+4*HR,
+         SLG = TB/AB,
+         OPS = OBP+SLG,
+         R.G <- R/G)
+
+## Summarize team batting statistics by year
+bat_teams <- teams %>% 
+  ## Missing: SF, RBI, IBB. Not in teams file. If needed, we can update
+  ## from other data files.
+  dplyr::select(franchID, lgID, G, AB, R, H, X2B, X3B, HR, SB, CS, 
+                BB, SO, HBP, SF) %>% 
+  mutate(BA = H/AB,
+         PA = AB+BB+HBP+SF,##+SH,
+         X1B = H-X2B-X3B-HR,
+         OBP = (H+BB+HBP)/(AB+BB+HBP+SF),
+         #OPSplus = 100*(OBP/leagueOBP + SLG/leagueSLG -1),
+         TB = 1*X1B+2*X2B+3*X3B+4*HR,
+         SLG = TB/AB,
+         OPS = OBP+SLG,
+         R.G <- R/G)
 
 ## Creating Missing Pitching Variables ##
 names(pitching)
@@ -51,5 +90,83 @@ pitch <- pitching %>%
          SO.W <- SO/BB,
          #LOB = left on base,
          )
+
+## Summarize league-wide statistics by year
+## TO DO: Need to fix:
+#### BAOpp, ERA, BFP, 
+pitch_league <- pitching %>% 
+  dplyr::select(!c(playerID, stint, teamID, lgID)) %>%
+  group_by(yearID) %>% 
+  summarise_all(sum) %>%
+  mutate(RA.G = R/G,
+         WLP = W/(W+L),
+         IP = IPouts/3,
+         WHIP = (BB+H)/IP,
+         H9 = 9*H/IP,
+         HR9 = 9*HR/IP,
+         BB9 = 9*BB/IP,
+         SO9 = 9*SO/IP,
+         SO.W = SO/BB,
+         )
+
+#P = number of pitches used in games
+NP <- pitching %>%
+  group_by(yearID, playerID) %>% 
+  group_by(yearID) %>% 
+  summarise(NP = n())
+
+pitch_league <- merge(pitch_league, NP, by = "yearID")
+
+## Summarize team statistics by year
+pitch_teams <- teams %>% 
+  ## Missing: GS, BAOpp, IBB, WP, BK, BFP, GF, SH, GIDP, NP. Not in teams file.
+  ## If needed, we can update from other data files.
+  dplyr::select(franchID, yearID, W, L, G, CG, SHO, SV, IPouts, H, ER, HR, BB,
+                SO, ERA, HBP, R, SF) %>% 
+  mutate(RA.G = R/G,
+         WLP = W/(W+L),
+         IP = IPouts/3,
+         WHIP = (BB+H)/IP,
+         H9 = 9*H/IP,
+         HR9 = 9*HR/IP,
+         BB9 = 9*BB/IP,
+         SO9 = 9*SO/IP,
+         SO.W = SO/BB,
+         )
 ```
 
+Our initial data source has restricted easy access to its database. As a result, we searched for a database with similar content and found it in *Lahman's Baseball Database*. This database is much cleaner and provides the potential 
+for in-depth analysis down to an individual player-by-player level.
+
+Initial data manipulation required aggregating the player level statistics to the league and team level. Some statistics present in our previous data source (e.g. batting average) were not present in Lahman's, so we had to do some calculations in order to maintain the consistency. After all data manipulation and cleanup, 
+we have the following statistics for the years 1871-2021:
+
+* **Batting**:
+  + Games, At-bats, Runs, Hits, Singles, Doubles, Triples, Home Runs, RBIs, Stolen Bases, Runners Caught Stealing, Walks, Strikeouts, Intentional Walks, Batters Hit by Pitch, Bunts, Sacrifice Fly-outs, Ground-out Double Plays, Batting Average, Plate Appearances, On-base Percentage, Total Bases, Slugging Percentage, On-base + Slugging Percentage, Runs per Game
+
+* **Pitching**
+  + Games, Games Started, Complete Cames, Shutouts, Saves, Outs Pitched, Hits, Earned runs, Home Runs, Walks, Strikeouts, Opponent's Batting Average, Earned Run Average, Intentional Walks, Wild Pitches, Batter Hit by Pitch, Balks, Batters faced by Pitcher, Games Finished, Runs Allowed, Sacrifice Bunts, Sacrifice Fly-outs, Ground-out double Plays, Runs per Game, Win-loss Percentage, Innings Pitched, Walks/Hits by Inning,  Hits per Nine Innings, Home Runs per Nine Innings, Walks per Nine Innings, Strikeouts per Nine Innings, Strikeouts per Walk, Number of Pitchers 
+  
+## Exploratory Data Analysis
+
+The statistics recorded in our dataset fall into a few different categories of data. For instance, we have many statistics that are count data (e.g. hits, strikeouts, walks, etc). Most of these count measurements lead to non-stationary time series, as shown below:
+
+```{r eda1, echo = FALSE}
+par(mfrow = c(1,2))
+plot(y = bat_league$H, x = bat_league$yearID, type = "l", xlab = "Year", 
+     ylab = "Hits")
+plot(y = pitch_league$SO, x = pitch_league$yearID, type = "l", xlab = "Year", 
+     ylab = "Strikeouts")
+```
+
+As we can see, these are clearly non-stationary. This is expected. Over the past 100-150 years, Major League Baseball (MLB) has grown, either to the expansion of the league to include more teams, or adding more games to the yearly schedule. As such, the number of hits, strikeouts, etc. will also increase. For these time series, we will considering either differencing or some type of model that accounts for the non-stationarity (e.g. MA, ARMA, ARIMA, etc)
+
+Another type of data we encounter in this data set is percentages (e.g. batting average, slugging percentage, on-base percentage. Each of these statistics fall between 0 and 1. Although this does not imply stationarity, these statistics cannot increase or decrease without bound.
+
+```{r eda2, echo = FALSE}
+par(mfrow = c(1,2))
+plot(y = bat_league$BA, x = bat_league$yearID, type = "l", xlab = "Year", 
+     ylab = "Batting Average")
+plot(y = bat_league$SLG, x = bat_league$yearID, type = "l", xlab = "Year", 
+     ylab = "Slugging Percentage")
+```
