--- a/Time Series Final Project.Rmd
+++ b/Time Series Final Project.Rmd
@@ -7,8 +7,6 @@ output: pdf_document
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-#data_dir <- Sys.getenv("DATA_DIR")
-#knitr::opts_knit$set(root.dir = data_dir)
 library("Lahman")
 library("dplyr")
 library("kableExtra")
@@ -16,170 +14,35 @@ library("kableExtra")
 
 ## Problem Statement
 
-Major League Baseball (MLB) has collected data on its players and their performances since 1871. This rich supply of data allows one to investigate and learn about trends in performance over time. Additionally, the game of baseball itself has evolved over the years. This is due to a variety of factors, ranging from the introduction of new technology to changes in the rules established by MLB. For example, the advent of sports analytics in the early 2000s has had an enormous impact on the game. Therefore, we are going to investigate the evolution of MLB player, team, division, and league-wide statistics over time. We would like to identify certain events in history, outside influences, and changes to the game itself and how they alter player, team, division, and league-wide performance moving forward. We would also like to consider relationships between different statistics and correlations among their individual time series.
+Major League Baseball (MLB) has collected data on its players and their performances since 1871. This rich supply of data allows one to investigate and learn about trends in performance over time. Additionally, the game of baseball itself has evolved over the years. This is due to a variety of factors, ranging from the introduction of new technology to changes in the rules established by MLB. For example, the advent of sports analytics in the early 2000s has had an enormous impact on the game. Recently there has been increased concern that with player improvements, particularly in the area of pitcher arm strength and pitch speed. This has the potential to make the game of baseball less entertaining and therefore cause fans to lose interest. As a result, MLB is concerned about major revenue losses from a decrease in in-person game attendance as well TV viewership. Therefore, we are going to investigate some of these trends that lead to a less strategic, nuanced, and entertaining game of baseball. We will look at several statistics over the last century that are indicative of these trends, find the best models that fit these time series, and perform forecasting to reveal what the future of MLB holds considering the current direction.
 
 ## Data Collection
 
 ```{r data, include = FALSE}
+## Danielle's Path
 batting <- read.csv("~/Spring 2022 5414/BaseballTimeSeries/Datasets/Batting.csv")
 pitching <- read.csv("~/Spring 2022 5414/BaseballTimeSeries/Datasets/Pitching.csv")
 teams <- read.csv("~/Spring 2022 5414/BaseballTimeSeries/Datasets/Teams.csv")
+## Steven's Path
+batting <- read.csv("~/VTGraduateSchool/SPRING_2022/STAT_5414/Project/BaseballTimeSeries/Datasets/Batting.csv")
+pitching <- read.csv("~/VTGraduateSchool/SPRING_2022/STAT_5414/Project/BaseballTimeSeries/Datasets/Pitching.csv")
+teams <- read.csv("~/VTGraduateSchool/SPRING_2022/STAT_5414/Project/BaseballTimeSeries/Datasets/Teams.csv")
 
-## Creating Missing Batting Variables ##
-names(batting)
-bat <- batting %>%
-  mutate(BA = H/AB,
-         PA = AB+BB+HBP+SF+SH,
-         X1B = H-X2B-X3B-HR,
-         #Age
-         OBP = (H+BB+HBP)/(AB+BB+HBP+SF),
-         #OPSplus = 100*(OBP/leagueOBP + SLG/leagueSLG -1),
-         TB = 1*X1B+2*X2B+3*X3B+4*HR,
-         SLG = TB/AB,
-         OPS = OBP+SLG,
-         #LOB = left on base
-         R.G = R/G
-         )
-
-## Summarize league-wide statistics by year
-bat_league <- batting %>% 
-  dplyr::select(!c(playerID, stint, teamID, lgID)) %>%
-  group_by(yearID) %>% 
-  summarise_all(sum) %>%
-  mutate(BA = H/AB,
-         PA = AB+BB+HBP+SF+SH,
-         X1B = H-X2B-X3B-HR,
-         OBP = (H+BB+HBP)/(AB+BB+HBP+SF),
-         #OPSplus = 100*(OBP/leagueOBP + SLG/leagueSLG -1),
-         TB = 1*X1B+2*X2B+3*X3B+4*HR,
-         SLG = TB/AB,
-         OPS = OBP+SLG,
-         R.G = R/G) %>%
-  ## Add "per game" statistics for counts
-  mutate(AB.G = AB/G,
-         H.G = H/G,
-         X2B.G = X2B/G,
-         X3B.G = X3B/G,
-         HR.G = HR/G,
-         RBI.G = RBI/G,
-         SB.G = SB/G,
-         CS.G = CS/G,
-         BB.G = BB/G,
-         SO.G = SO/G,
-         IBB.G = IBB/G,
-         HBP.G = HBP/G,
-         SH.G = SH/G,
-         SF.G = SF/G,
-         GIDP.G = GIDP/G,
-         X1B.G = X1B/G,
-         TB.G = TB/G)
-
-## Summarize team batting statistics by year
-bat_teams <- teams %>% 
-  ## Missing: SF, RBI, IBB. Not in teams file. If needed, we can update
-  ## from other data files.
-  dplyr::select(franchID, lgID, G, AB, R, H, X2B, X3B, HR, SB, CS, 
-                BB, SO, HBP, SF) %>% 
-  mutate(BA = H/AB,
-         PA = AB+BB+HBP+SF,##+SH,
-         X1B = H-X2B-X3B-HR,
-         OBP = (H+BB+HBP)/(AB+BB+HBP+SF),
-         #OPSplus = 100*(OBP/leagueOBP + SLG/leagueSLG -1),
-         TB = 1*X1B+2*X2B+3*X3B+4*HR,
-         SLG = TB/AB,
-         OPS = OBP+SLG,
-         R.G = R/G)
-
-## Creating Missing Pitching Variables ##
-names(pitching)
-pitch <- pitching %>%
-  mutate(RA.G = R/G,
-         #P = number of pitches used in games,
-         #Age,
-         WLP = W/(W+L),
-         #BF = batters faced,
-         #ERAplus = 100*(leagueERA/ERA),
-         IP = IPouts/3,
-         #FIP = (13*HR+3*(BB+HBP)-2*SO)/IP + LeagueConstant(MLB Avg ERA),
-         WHIP = (BB+H)/IP,
-         H9 = 9*H/IP,
-         HR9 = 9*HR/IP,
-         BB9 = 9*BB/IP,
-         SO9 = 9*SO/IP,
-         SO.W = SO/BB,
-         #LOB = left on base,
-         )
-
-## Summarize league-wide statistics by year
-## TO DO: Need to fix:
-#### BAOpp, ERA, BFP, 
+## Creating missing pitching variables and summarize league-wide statistics 
+## of interset by year since 1922
 pitch_league <- pitching %>% 
   dplyr::select(!c(playerID, stint, teamID, lgID)) %>%
   group_by(yearID) %>% 
   summarise_all(sum) %>%
-  mutate(RA.G = R/G,
-         WLP = W/(W+L),
-         IP = IPouts/3,
-         WHIP = (BB+H)/IP,
-         H9 = 9*H/IP,
-         HR9 = 9*HR/IP,
-         BB9 = 9*BB/IP,
-         SO9 = 9*SO/IP,
-         SO.W = SO/BB,
-         ) %>%
-  ## Add "per game" statistics for counts
-  mutate(GS.G = GS/G,
-         CG.G = CG/G,
-         SHO.G = SHO/G,
-         SV.G = SV/G,
-         IPouts.G = IPouts/G,
-         H.G = H/G,
-         ER.G = ER/G,
-         HR.G = HR/G,
-         BB.G = BB/G,
-         SO.G = SO/G,
-         IBB.G = IBB/G,
-         WP.G = WP/G,
-         HBP.G = HBP/G,
-         BK.G = BK/G,
-         BFP.G = BFP/G,
-         GF.G = GF/G,
-         R.G = R/G,
-         SH.G = SH/G,
-         SF.G = SF/G,
-         GIDP.G = GIDP/G,
-         IP.G = IP/G,
-         )
-
-#P = number of pitches used in games
-NP <- pitching %>%
-  group_by(yearID, playerID) %>% 
-  group_by(yearID) %>% 
-  summarise(NP = n())
-
-pitch_league <- merge(pitch_league, NP, by = "yearID")
-
-## Summarize team statistics by year
-pitch_teams <- teams %>% 
-  ## Missing: GS, BAOpp, IBB, WP, BK, BFP, GF, SH, GIDP, NP. Not in teams file.
-  ## If needed, we can update from other data files.
-  dplyr::select(franchID, yearID, W, L, G, CG, SHO, SV, IPouts, H, ER, HR, BB,
-                SO, ERA, HBP, R, SF) %>% 
-  mutate(RA.G = R/G,
-         WLP = W/(W+L),
-         IP = IPouts/3,
-         WHIP = (BB+H)/IP,
-         H9 = 9*H/IP,
-         HR9 = 9*HR/IP,
-         BB9 = 9*BB/IP,
-         SO9 = 9*SO/IP,
-         SO.W = SO/BB,
-         )
+  mutate(IP = IPouts/3) %>%
+  mutate(H9 = 9*H/IP, HR9 = 9*HR/IP, BB9 = 9*BB/IP, SO9 = 9*SO/IP, 
+         WP9 = 9*WP/IP, HBP9 = 9*HBP/IP, SAC9 = 9*(SH + SF)/IP) %>%
+  filter(yearID > 1921)
 ```
 
-Our initial data source, Baseball Reference via Bill Petti's baseballr package, has restricted access to the database. As a result, we searched for a database with similar content and found it in Lahman's Baseball Database. This database is much cleaner, easier to collect data from, and provides the potential for in-depth analysis down to an individual player-by-player level.
+Our data source is Lahman's Baseball Database. This database has batting, pitching, and fielding statistics dating back to 1871. Lahman's data allows for a high-level view of trends across the league, as well as potential for in-depth analysis down to an individual team-by-team or player-by-player level. We also referred to the Baseball Reference via Bill Petti's baseballr package, although there is restricted access to the database. Baseball Reference provided some insight on statistics of interest that were not readily available in Lahman's Baseball Database, but that could be calculated through simple data wrangling procedures.
 
-Initial data manipulation required aggregating the player level statistics to the league and team level. Some statistics present in the Baseball Reference database (e.g. batting average) were not present in Lahman's, so we had to do some calculations in order to maintain the consistency. After all data manipulation and cleanup, we have the following statistics for the years 1871-2021:
+Initial data manipulation required aggregating the player level statistics to the league level. Some statistics present in the Baseball Reference database (e.g. batting average) were not present in Lahman's, so we had to do some calculations in order to maintain the consistency. After all data manipulation and cleanup, we have the following statistics for the years 1871-2021:
 \newpage
 
 * **Batting**:
@@ -205,161 +68,3 @@ kable(pitching.names)
 ```
 \end{center} 
 \newpage
- 
-  
-## Exploratory Data Analysis
-
-### Data Types 
-
-The statistics recorded in our dataset fall into a few different categories of data. For instance, we have many statistics that are count data (e.g. hits, strikeouts, walks, etc). Most of these count measurements lead to non-stationary time series, as shown below:
-
-```{r eda1, echo = FALSE}
-par(mfrow = c(1,2))
-plot(y = bat_league$H, x = bat_league$yearID, type = "l", xlab = "Year", 
-     ylab = "Hits")
-plot(y = pitch_league$SO, x = pitch_league$yearID, type = "l", xlab = "Year", 
-     ylab = "Strikeouts")
-```
-
-As we can see, these are clearly non-stationary. This is expected. Over the past 100-150 years, Major League Baseball (MLB) has grown, either to the expansion of the league to include more teams, or adding more games to the yearly schedule. As such, the number of hits, strikeouts, etc. will also increase. For these time series, we will considering either differencing or some type of model that accounts for the non-stationarity (e.g. MA, ARMA, ARIMA, etc).
-
-We also notice that this time series has many spikes in it that deviate from the overall trend. This is likely due to modifications to the MLB schedule. For instance, the 2020 MLB season was drastically shortened due to COVID-19. Instead of playing a full slate of 162 games, each team only played 60 games. This naturally leads to a lower overall number of strikeouts. Other causes of this behavior could be a lockout due to negotiations between players and owners or times of war. Later on, we will show that these time series lead to many outliers in our fitted model. As a result, our assumption of normality is violated. One way to address this, and account for these outliers, is to average these statistics by the number of games.
-
-```{r eda2, echo = FALSE}
-par(mfrow = c(1,2))
-plot(y = bat_league$H.G, x = bat_league$yearID, type = "l", xlab = "Year", 
-     ylab = "Hits Per Game")
-plot(y = pitch_league$SO.G, x = pitch_league$yearID, type = "l", xlab = "Year", 
-     ylab = "Strikeouts Per Game")
-```
-
-Another type of data we encounter in this data set is percentages (e.g. batting average, slugging percentage, on-base percentage. Each of these statistics fall between 0 and 1. Although this does not imply stationarity, these statistics cannot increase or decrease without bound.
-
-```{r eda3, echo = FALSE}
-par(mfrow = c(1,2))
-plot(y = bat_league$BA, x = bat_league$yearID, type = "l", xlab = "Year", 
-     ylab = "Batting Average")
-plot(y = bat_league$SLG, x = bat_league$yearID, type = "l", xlab = "Year", 
-     ylab = "Slugging Percentage")
-```
-
-We also have a couple fieds that are calculated averages. These fields don't have the same bounds that percentages do, but also do not increase without bound as the counts seem to. These fields include Runs Per Game, Hits Per Nine Innings, Earned Run Average, etc.
-
-```{r eda4, echo = FALSE}
-par(mfrow = c(1,2))
-plot(y = bat_league$R.G, x = bat_league$yearID, type = "l", xlab = "Year", 
-     ylab = "Runs Per Game")
-plot(y = pitch_league$H9, x = pitch_league$yearID, type = "l", xlab = "Year", 
-     ylab = "Hits Per Nine Innings")
-```
-
-### Initial Models
-
-```{r eda5, include = FALSE}
-years <- bat_league$yearID
-hits <- bat_league$H
-diff_hits <- diff(hits)
-max_order <- 5
-hits_model <- ar(diff_hits, order.max = max_order, aic = TRUE, method = "mle")
-
-# AIC = Akaike Information Criterion
-hits_AIC <- hits_model$aic
-n = length(hits)
-# BIC = Bayesian Information Criterion
-hits_BIC <- hits_model$aic - 2*((0:max_order)+1) + log(n) * ((0:max_order)+1)
-# Approximate posterior probabilities for the several models
-approx_post_probs <- exp(-0.5*hits_BIC) / sum(exp(-0.5*hits_BIC))
-hits_ar_model_df <- round(rbind(hits_AIC, hits_BIC, approx_post_probs), 2)
-rownames(hits_ar_model_df) <- c("Akaike Information Criterion", "Bayesian Information Criterion", "Approximate Posterior Probabilities")
-hits_ar1 <- ar(diff_hits, order.max = 1, aic = TRUE, method = "mle")
-
-max.p <- 2
-max.d <- 1
-max.q <- 2
-BIC.array <- array(NA,dim=c(max.p+1,max.d+1,max.q+1))
-AIC.array <- array(NA,dim=c(max.p+1,max.d+1,max.q+1))
-best.bic <- 1e8
-x.ts <- hits
-for (p in 0:max.p) {
-  for (d in 0:max.d) {
-    for(q in 0:max.q) {
-      # This is a modification of a function originally from the book:
-      # Cowpertwait, P.S.P., Metcalfe, A.V. (2009), Introductory Time 
-      # Series with R, Springer.
-      # Modified by M.A.R. Ferreira (2016, 2020).
-      cat("p = ", p, ", d = ", d, ", q = ", q, "\n")
-      fit <- tryCatch(
-                {  arima(x.ts, order = c(p,d,q), method="CSS-ML")
-                },
-                error = function(cond){
-                    message("Original error message:")
-                    message(cond)
-                    # Choose a return value in case of error
-                    return(NA)
-                }
-                )
-       if(!is.na(fit)) { 
-          number.parameters <- length(fit$coef) + 1
-          BIC.array[p+1,d+1,q+1] = -2*fit$loglik + log(n)*number.parameters
-          AIC.array[p+1,d+1,q+1] = -2*fit$loglik + 2*number.parameters
-
-          if (BIC.array[p+1,d+1,q+1] < best.bic) 
-          {
-            best.bic <- BIC.array[p+1,d+1,q+1]
-            best.fit <- fit
-            best.model <- c(p,d,q) 
-          }
-       }
-    }
-  }
-}
-
-best.bic
-best.fit
-best.model
-
-hits_arima_df <- cbind(BIC.array[,1,1], BIC.array[,2,1], BIC.array[,1,2], 
-                       BIC.array[,2,2], BIC.array[,1,3], BIC.array[,2,3])
-rownames(hits_arima_df) <- c("p = 0", "p = 1", "p = 2")
-colnames(hits_arima_df) <- c("q = 0, d = 0", "q = 1, d = 0", "q = 0, d = 1", 
-                             "q = 1, d = 1", "q = 0, d = 2", "q = 1, d = 2")
-```
-
-As shown above, our dataset has an extensive number of statistics observed through time. First, we'll look number of hits. This is a simple time series that can help us hone our analysis skills. We displayed a plot earlier that showed this time series is non-stationary. To make it stationary and allow for analysis using an AR(p) model, we will conduct differencing. There doesn't seem to be any sort of seasonality, so we'll calculate the differenced time series using a lag of one. We can see below that differencing is effective at removing the non-stationarity. Also displayed below is the auto-correlation function (ACF) and the partial auto-correlation function (PACF).
-
-```{r, echo = FALSE}
-par(mfrow = c(1, 3))
-plot(diff_hits, type = "l", ylab = "Differenced Hits")
-acf(diff_hits, main = "")
-pacf(diff_hits, main = "")
-```
-
-Both the ACF and PACF above show that the time series may only depend on the first and second lags for a given time point. We will fit an AR(p) model and calculate the Akaike Information Criterion (AIC) and the Bayesian Information Criterion (BIC) to see which order model fits best. To be safe, we  will consider the models of up to order 5.
-\begin{center}
-```{r, echo = FALSE}
-knitr::kable(hits_ar_model_df)
-```
-\end{center}
-Both the AIC and BIC agree that the AR(2) is the most appropriate. Additionally, 
-we can see that the approximate posterior probability for the AR(2) model is over 0.7. Assuming that the true model is an AR(p) model of order 0-5, the AR(2) model is likely the best model. We cannot completely discount the AR(1) and AR(3) models, but it seems unlikely for them to be the correct model. Therefore, our fitted AR(2) model is as follows:
-
-$$
-y_t - \mu = -0.499 \cdot(y_{t - 1} - \mu) + \epsilon_t
-$$
-
-Here we have only considered an AR(p) model. But we would also like to consider other models, such as the ARMA or ARIMA models. We fit ARIMA models for all combinations of auto regressive coefficients ($p$), moving average coefficients ($q$), and differencing coefficients ($d$). Below are our results:
-\begin{center}
-```{r, echo = FALSE}
-knitr::kable(round(hits_arima_df, 2))
-```
-\end{center}
-The best model, according to the BIC criterion, is the ARIMA(0, 1, 1) model. This is different than what we saw previously when only considering AR(p) models. The AR(2) model we fit earlier had a BIC of 2958.71, so this ARIMA(0, 1, 1) model improves upon that. It is also a simpler model with one less coefficient.
-
-$$
-y_t = 26555.05 + 0.7858 \epsilon_{t - 1} + \epsilon_t
-$$
-
-### Next Steps
-
-We have only included one time series in this report, that of number of league-wide hits per MLB season. We have begun to explore other time series, but will not include them for brevity's sake. Our next steps will be to conduct forecasting for these time series and see how they perform against real data. Additionally, we want to look at how the individual time series relate to each other through cross-correlation functions. Lastly, as we learn more advanced topics in class, we plan to incorporate Time Varying Autoregressive (TVAR) models and Mixed Model Time Series.
-
